Themes, Nav Button, Language Context, Font, Navbar 50%

--- a/src/index.css
+++ b/src/index.css
@@ -295,6 +295,15 @@ body {
 
 /* END THEME'S SETTINGS */
 
+
+
+
+
+
+/* ======================================================================================================================= 
+===================================================== MOBILE ============================================================ 
+======================================================================================================================= */
+
 /* NAVBAR */
 
 .nav-logo {
@@ -308,11 +317,6 @@ body {
 }
 
 /* End of NAVBAR */
-
-
-
-
-
 
 
 /* ======================================================================================================================= 
