--- a/src/index.css
+++ b/src/index.css
@@ -1,52 +1,4 @@
-/* CUSTOM FONT - MOSK */
-@font-face {
-  font-family: 'Mosk';
-  src: url(fonts/Mosk\ Thin\ 100.ttf) format('truetype');
-  font-weight: 100;
-}
-@font-face {
-  font-family: 'Mosk';
-  src: url(fonts/Mosk\ Extra-Light\ 200.ttf) format('truetype');
-  font-weight: 200;
-}
-@font-face {
-  font-family: 'Mosk';
-  src: url(fonts/Mosk\ Light\ 300.ttf) format('truetype');
-  font-weight: 300;
-}
-@font-face {
-  font-family: 'Mosk';
-  src: url(fonts/Mosk\ Normal\ 400.ttf) format('truetype');
-  font-weight: 400;
-}
-@font-face {
-  font-family: 'Mosk';
-  src: url(fonts/Mosk\ Medium\ 500.ttf) format('truetype');
-  font-weight: 500;
-}
-@font-face {
-  font-family: 'Mosk';
-  src: url(fonts/Mosk\ Semi-Bold\ 600.ttf) format('truetype');
-  font-weight: 600;
-}
-@font-face {
-  font-family: 'Mosk';
-  src: url(fonts/Mosk\ Bold\ 700.ttf) format('truetype');
-  font-weight: 700;
-}
-@font-face {
-  font-family: 'Mosk';
-  src: url(fonts/Mosk\ Extra-Bold\ 800.ttf) format('truetype');
-  font-weight: 800;
-}
-@font-face {
-  font-family: 'Mosk';
-  src: url(fonts/Mosk\ Ultra-Bold\ 900.ttf) format('truetype');
-  font-weight: 900;
-}
-
-/* END OF CUSTOM FONT - MOSK */
-
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 
 
 /* ROOT VARIABLES */
@@ -55,6 +7,8 @@
   /* Color variables */
   --darkColor: #102C2F;
   --lightColor: #FFFFFF;
+  --darkColorTransparent: rgba(16, 44, 47, .8);
+  --lightColorTransparent: rgba(255, 255, 255, .8);
   --redColor: #cd003d;
   --brownColor: #706261;
   /* Font size variables */
@@ -88,13 +42,15 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: 'Mosk', sans-serif;
+  font-family: 'Roboto', sans-serif;
 }
 
-body {
-  background-color: var(--lightColor);
-}
 
+
+a {
+  text-decoration: none;
+  color: inherit;
+}
 
 /* MODO METROPOLIS */
 .mode-metropolis-active {
@@ -203,7 +159,7 @@ body {
 
 .nav__active {
   transform: translateX(0%);
-  transition: 0.5s linear;
+  transition: 0.4s linear;
 }
 
 .nav-collapsed {
@@ -211,7 +167,7 @@ body {
   flex-direction: row;
   align-items: center;
   justify-content: space-between;
-  padding: 0 .3em .3em .3em;
+  padding: 5px 10px;
 }
 
 /* End Nav Toggler Button */
@@ -226,6 +182,17 @@ body {
   background-color: var(--lightColor);
   color: var(--darkColor);
 }
+.dark-theme-navbar {
+  background-color: var(--darkColorTransparent);
+  color: var(--lightColor);
+}
+
+.light-theme-navbar {
+  background-color: var(--lightColorTransparent);
+  color: var(--darkColor);
+}
+
+
 .dark-theme-element {
   background-color: var(--lightColor);
   color: var(--lightColor);
@@ -266,8 +233,9 @@ body {
 }
 
 .icon {
- z-index: 2;
- filter: invert(100%) brightness(100%) grayscale(100%) hue-rotate(90deg) opacity(100%) contrast(175%);
+  z-index: 2;
+  filter: invert(100%) brightness(100%) grayscale(100%) hue-rotate(90deg) opacity(100%) contrast(175%);
+  cursor: pointer;
 }
 .iconDark {
   width: 100%;
@@ -286,11 +254,19 @@ body {
   
 }
 .box-left {
-  left: 0rem;
+  right: 3.1rem;
 }
 
 .box-right {
-  left: 3rem;
+  right: 0.1rem;
+}
+
+.light-mode-active {
+  cursor:pointer;
+}
+
+.dark-mode-active {
+  cursor:pointer;
 }
 
 /* END THEME'S SETTINGS */
@@ -304,11 +280,29 @@ body {
 ===================================================== MOBILE ============================================================ 
 ======================================================================================================================= */
 
+/* BODY */
+
+
+
 /* NAVBAR */
+#navbar {
+  background-image: url('./source/images/background-mobile.png')!important;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position-y: 60%;
+}
+
+
+
 
 .nav-logo {
+  padding: 15px 0;
   width: 50px;
   height: 62px;
+}
+
+.full-logo {
+  width: 140px;
 }
 
 .logoImg {
@@ -316,7 +310,134 @@ body {
   height: 100%;
 }
 
+.nav-container {
+  height: 40vh;
+  transform: translateY(-130%);
+  transition: 0.5s linear;
+}
+
+.nav__active {
+  transform: translateY(0%);
+  transition: 1s linear;
+}
+
+.nav-menu {
+  height: 100%;
+}
+
+.nav-ul {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  padding: 0;
+  gap: 1rem;
+  list-style: none;
+  font-size: 1.3rem;
+  transition: all .4s;
+  height: 100%;
+}
+
+.nav-ul li {
+  font-size: var(--textoMSizeDesktop);
+  width: 40%;
+  text-align: center;
+}
+
+.theme-label {
+  scale: 60%;
+  max-width: fit-content;
+}
+
+.toggle {
+  position: fixed;
+  right: .3em;
+}
+
+
+.nav-li-lang {
+  list-style: none;
+  transition: all .4s;
+  font-weight: bold;
+}
+
+.li-instagram a i {
+  font-size: 22px;
+}
+.li-instagram {
+  width: 150%;
+}
+
+.dropdown-menu {
+  position: fixed;
+  left: 2.2em;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  flex-wrap: wrap;
+  padding: .5em;
+  margin-top: .3em;
+  justify-content: center;
+  align-items: center;
+  gap: .7em;
+  opacity: 1;
+  transition: all .4s;
+  transform: translateY(-50%) scaleY(0);
+}
+
+.visible {
+  transform: translateY(0%);
+  transition: transform .4s, opacity 1s ease-in;
+  opacity: 1;
+  
+}
+
+.lang-toggle {
+  cursor: pointer;
+}
+
 /* End of NAVBAR */
+
+/* MAIN */
+.main-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin-top: 23px;
+  gap: 1rem;
+}
+
+.main-logo {
+  width: 144px;
+}
+
+.main-paragraph {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items:center;
+  gap: 1.5rem;
+}
+
+.main-text {
+  text-align: center;
+  font-size:var(--h2SizeMobile);
+  height: 80%;
+  height: 7rem;
+  padding: 1.3rem;
+  overflow: hidden;
+}
+
+.main-more {
+  cursor: pointer;
+  font-weight: var(--textoLWeightMobile);
+}
+
+/* End of MAIN */
+
+
 
 
 /* ======================================================================================================================= 
@@ -324,10 +445,108 @@ body {
 ======================================================================================================================= */
 
 @media screen and (min-width: 900px) {
+  
+  /* BODY */
+
+
+  
   /* NAVBAR */
+  
+  #navbar {
+    background-image: url('./source/images/background-desktop.png');
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position-y: 30%;
+  }
 
   .nav-logo {
-    width: 76px;
-    height: 62px;
+    width: 200px;
+    height: 100%;
+    padding-left: 2rem;
+    align-self: center;
   }
+
+  .nav-container {
+    height: fit-content;
+  }
+
+  .nav-menu {
+    height: 50px;
+  }
+  
+  .nav-ul {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    flex-wrap: nowrap;
+    justify-content: flex-start;
+    gap: 1.3em;
+    list-style: none;
+    font-size: 1.3rem;
+    padding: 0 2rem;
+    transition: all .4s;
+    height: 100%;
+  }
+
+  .nav-ul li {
+    width: 100%;
+    min-width: fit-content;
+  }
+  
+  .toggle {
+    position: fixed;
+    right: .3em;
+  }
+  
+  
+  .nav-li-lang {
+    list-style: none;
+    transition: all .4s;
+    font-weight: bold;
+  }
+
+  .li-instagram a i {
+    font-size: 22px;
+  }
+  .li-instagram {
+    width: 150%;
+  }
+
+  .box-left {
+    right: 3.1rem;
+  }
+  
+  .box-right {
+    right: .1rem;
+  }
+
+  /* End of NAVBAR */
+
+
+  /* MAIN */
+  .main-container {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .main-paragraph {
+    width: 50%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .main-text {
+    text-align:start;
+    font-size:var(--h2SizeDesktop);
+    line-height: 35.56px;
+  }
+
+
+  /* End of MAIN */
+
+
 }
