--- a/src/index.css
+++ b/src/index.css
@@ -468,8 +468,7 @@ a {
   transition: all .5s ;
   position: relative;
   height:100%;
-  width: 100%;
-  
+  /* width: 35%; */
 }
 
 .image-container__background-image {
@@ -773,7 +772,7 @@ a {
     transition: all .5s ;
     position: relative;
     height:100%;
-    width: 35%;
+    /* width: 35%; */
   }
   .image-container:hover .image-container__background-image {
     filter: brightness(60%);
@@ -954,7 +953,7 @@ a {
   /* End of CONTACT-INSTAGRAM SECTION (DESKTOP) */
 
 
-  /*FOOTER*/
+  /*FOOTER SECTION (DESKTOP) */
 
   .footer-container{
     margin-top: 100px;
@@ -1065,4 +1064,125 @@ a {
     transform: rotate(-60deg);
     visibility: hidden;
   }
+}
+
+  /* End of FOOTER SECTION (DESKTOP) */
+
+.title-Carousel{
+  font-family:'Josefin-Sans';
+  font-size: 32px;
+  text-align: center;
+  min-width: 100%;
+  letter-spacing: 0.3rem;
+  z-index: 500;
+}
+
+.carousel-imgContainer{
+  display: flex;
+  flex-flow: row nowrap;
+  place-content: center center;
+  width: 37.5%;
+}
+
+.slide{
+  min-width: 100%;
+  overflow:hidden;
+  transition:.3s ease all;
+  z-index: 10;
+  position:relative;
+  display: flex;
+  flex-flow: row nowrap;
+  place-content: center center;
+  gap: 65px;
+}
+
+.slideshow-container{
+  overflow: hidden;
+  margin-top: 50px;
+  position: relative;
+  height: 850px;
+}
+
+.slideContainer{
+  display: flex;
+  flex-wrap: nowrap;
+}
+
+.imgSlide{
+  max-width: 100%;
+  vertical-align:top;
+}
+
+.slideControls{
+  position: absolute;
+  bottom:0;
+  left: 46%;
+  z-index:20;
+  width:150px;
+  height:10%;
+  pointer-events:none;
+  display: flex;
+  flex-flow: row nowrap;
+  justify-content: space-between;
+}
+
+.slideBoton{
+  pointer-events:all;
+  background:none;
+  border:none;
+  cursor:pointer;
+  outline:none;
+  width: 40px;
+  height: 40px;
+  text-align:center;
+  position:absolute;
+  transition: .3s ease all;
+}
+
+.slideBoton:hover{
+  background-color: #FFFFFF;
+}
+
+.slideBotonLeft{
+  left: 0;
+}
+
+.slideBotonRight{
+  right: 0;
+}
+
+.arrow{
+  filter: invert(100%) sepia(5%) saturate(7434%) hue-rotate(317deg) brightness(112%) contrast(114%);
+}
+
+.arrow:hover{
+  animation: slideButtonAnimation;
+  animation-duration:  0.7s;
+  animation-fill-mode: forwards;
+  filter: invert(15%) sepia(36%) saturate(604%) hue-rotate(137deg) brightness(95%) contrast(100%);
+}
+
+
+@keyframes slideButtonAnimation {
+  50%{
+    opacity: 0;
+    transform: translate(-20px);
+  }
+  51%{
+    transform: translate(20px);
+  }
+  100% {
+    transform: translate(0px);
+    opacity: 1;
+  }
+}
+
+#background-video{
+  border: transparent;
+  width: 100%;
+  height: 87.5%;
+  position: absolute;
+  object-fit: cover;
+  filter: blur(45px) opacity(70%);
+  z-index: -50;
 }
