--- a/src/index.css
+++ b/src/index.css
@@ -134,12 +134,14 @@ a {
 .nav__toggler {
   order: 2;
   z-index: 9;
+
 }
 
 .nav__toggler div {
   width: 18px;
   height: 2px;
   transition: 0.4s ease-in;
+  -webkit-transition: 0.4s ease-in;
 }
 
 .line1 {
@@ -157,6 +159,7 @@ a {
   height: 100%;
   margin-right: .5em;
   z-index: 4;
+
 }
 
 .toggle .line1 {
@@ -171,7 +174,7 @@ a {
 
 .nav__active {
   transform: translateX(0%);
-  transition: 0.4s linear;
+  transition: transform 0.4s linear;
 }
 
 .nav-collapsed {
@@ -180,6 +183,15 @@ a {
   align-items: center;
   justify-content: space-between;
   padding: 5px 10px;
+  z-index: 9 !important;
+  position: sticky;
+  
+}
+
+.sticky {
+  position: fixed;
+  width: 100%;
+  top: 0;
 }
 
 /* End Nav Toggler Button */
@@ -197,10 +209,21 @@ a {
 .dark-theme-navbar {
   background-color: var(--darkColorTransparent);
   color: var(--lightColor);
+  
 }
 
 .light-theme-navbar {
   background-color: var(--lightColorTransparent);
+  color: var(--darkColor);
+}
+
+.dark-theme-navbar-ul {
+  background-color: var(--darkColor);
+  color: var(--lightColor);
+  
+}
+.light-theme-navbar-ul {
+  background-color: var(--lightColor);
   color: var(--darkColor);
 }
 
@@ -265,6 +288,11 @@ a {
   z-index: 9;
   
 }
+.toggle {
+  margin-right: .8rem;
+  
+}
+
 .box-left {
   right: 3.1rem;
 }
@@ -302,7 +330,11 @@ a {
   background-repeat: no-repeat;
   background-size: cover;
   background-position-y: 60%;
+  height:auto;
+  z-index: 2;
 }
+
+
 
 
 
@@ -322,19 +354,29 @@ a {
   height: 100%;
 }
 
+
 .nav-container {
-  height: 40vh;
-  transform: translateY(-130%);
-  transition: 0.5s linear;
+  height: 0;
+  /*transform: translateY(-130%);*/
+  transition: 0.3s linear;
+  z-index: 1;
+  position: absolute;
+  top: -10rem;
+  left: 0;
 }
 
+
 .nav__active {
-  transform: translateY(0%);
-  transition: 1s linear;
+  /*transform: translateY(0%);*/
+  padding-top: 2rem;
+  transition: top 0.4s linear;
+  height: 50vh;
+  top: 4.5rem;
 }
 
 .nav-menu {
   height: 100%;
+  z-index: -1;
 }
 
 .nav-ul {
@@ -349,6 +391,7 @@ a {
   font-size: 1.3rem;
   transition: all .4s;
   height: 100%;
+  transition: 0.4s ease;
 }
 
 .nav-ul li {
@@ -359,6 +402,9 @@ a {
 
 .theme-label {
   scale: 60%;
+  transform: scale(60%);
+  -webkit-transform:scale(60%);
+  -moz-transform:scale(99%);
   max-width: fit-content;
 }
 
@@ -416,7 +462,7 @@ a {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  margin-top: 23px;
+  margin-top: 6rem;
   gap: 1rem;
 }
 
@@ -437,7 +483,7 @@ a {
   text-align: center;
   font-size:var(--h2SizeMobile);
   font-weight: var(--textoAllWeight);
-  padding: 1.75rem;
+  padding: 0 1.75rem 1.75rem 1.75rem;
   transition: all .5s linear;
   line-height: 25.32px;
   
@@ -524,6 +570,7 @@ a {
 .iBtn {
   width: 15px;
   height: 15px;
+  z-index: 0;
 }
 
 .xBtn {
@@ -532,6 +579,7 @@ a {
   width: 20px;
   height: 20px;
   padding: 5px;
+  z-index: 0;
 }
 
 .frame__img-btn-plus {
@@ -560,11 +608,36 @@ a {
   margin-top: 44px;
   letter-spacing: 2px;
   margin: 50px 0;
+  overflow: hidden;
 }
 
-.contact-section, .instagram-section h1 {
-  margin: 20px 0 40px 0;
+.videoTag-bottom {
+  position: absolute;
+  top: 75rem;
+  left: -11rem;
+  transform: translate(-50%, -50%);
+  -webkit-transform: translateX(-150%);
+  z-index: -9;
+  opacity: 0.3;
+  filter: blur(15px);
+  align-self: center;
+  justify-self: center;
+  transform: rotate(90deg);
+  -webkit-transform: rotate(90deg);
+  height: 100vw;
+  width: 100vh; /* 100 * 16 / 9 */
+  max-height: 100vw; /* 100 * 9 / 16 */
+  max-width: fit-content;
+  overflow: hidden;
+  object-fit: cover;
 }
+
+.contact-section h1, .instagram-section h1 {
+  margin: 20px 0 40px 0;
+  letter-spacing: 2px  !important;
+}
+
+
 
 /* CONTACT SECTION (MOBILE) */
 .contact-section {
@@ -572,6 +645,33 @@ a {
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  padding: 12px;
+  width: 100%;
+}
+
+.contact-section__container {
+  padding: 1rem 0;
+  height: 100%;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  gap: 4rem;
+  font-size: var(--textoLSizeMobile);
+}
+
+.contact-text {
+  width: 80%;
+  line-height: 2;
+  text-align: center;
+  font-weight: var(--textoMWeightMobile);
+}
+
+.contact-instaLink {
+  width: 80%;
+  overflow-wrap: break-word;
 }
 
 /* End of CONTACT SECTION (MOBILE) */
@@ -680,6 +780,11 @@ a {
 
   .nav-container {
     height: fit-content;
+    position: unset;
+    display: flex;
+    align-items: center;
+    padding-top: 0;
+    
   }
 
   .nav-menu {
@@ -706,7 +811,7 @@ a {
   }
   
   .toggle {
-    position: fixed;
+    position:unset;
     right: .3em;
   }
   
@@ -741,7 +846,7 @@ a {
     flex-direction: row;
     justify-content: center;
     align-items: center;
-    margin-top: 3.5rem;
+    margin-top: 10rem;
   }
 
   .main-paragraph {
@@ -865,13 +970,38 @@ a {
   /* CONTACT-INSTAGRAM SECTION (DESKTOP) */
 
   .contact-instagram-section {
-    display: flex;
-    flex-direction: row;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: 1fr;
+    grid-column-gap: 40px;
+    grid-row-gap: 0px; 
     justify-content: center;
-    align-items:center;
+    align-items:flex-start;
     margin-top: 44px;
     letter-spacing: 2px;
     font-family: 'Josefin Sans', sans-serif;
+    padding: 0 2rem;
+  }
+
+  .videoTag-bottom {
+    position: absolute;
+    top: 28rem;
+    left: 30rem;
+    transform: translate(-50%, -50%);
+    -webkit-transform: translateX(-150%);
+    z-index: -9;
+    opacity: 0.2;
+    filter: blur(25px);
+    align-self: center;
+    justify-self: center;
+    transform: rotate(90deg);
+    -webkit-transform: rotate(90deg);
+    height: 120vw;
+    width: 100vh; /* 100 * 16 / 9 */
+    max-height: 100vw; /* 100 * 9 / 16 */
+    overflow: hidden;
+    object-fit: cover;
+    max-width: 100vh;
   }
   
   
@@ -882,6 +1012,23 @@ a {
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    height: 100%;
+  }
+
+  .contact-section__container {
+    padding: 5rem 0;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 4rem;
+    font-size: var(--subtitleSizeDesktop);
+  }
+
+  .contact-text {
+    width: 55%;
+    text-align: center;
   }
   /* End of CONTACT SECTION (DESKTOP) */
 
@@ -891,7 +1038,7 @@ a {
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    width: 40%;
+    width: 90%;
   }
   
   .instagram-section__profile {
@@ -920,12 +1067,12 @@ a {
     background-color: #000000;
     background-image: url('./source/images/profile-image.png');
     background-position: center;
-    background-position-y: 6px;
+    background-position-y: 14px;
     background-repeat: no-repeat;
     background-size: cover;
-    background-size:40px;
-    width: 42px;
-    height: 42px;
+    background-size:50px;
+    width: 62px;
+    height: 62px;
     border-radius: 50%;
     display: flex;
     justify-content: center;
@@ -934,6 +1081,7 @@ a {
   }
   
   .first-line__view-profile {
+    min-width: fit-content;
     width: 25%;
     height: 42px;
     background-color: #0090CE;
@@ -941,7 +1089,8 @@ a {
     justify-content: center;
     align-items: center;
     font-weight: 700;
-  
+    padding: 1.8rem;
+    margin-bottom: 2rem;
   }
   
   
