--- a/src/index.css
+++ b/src/index.css
@@ -1068,6 +1068,8 @@ a {
 
   /* End of FOOTER SECTION (DESKTOP) */
 
+  /* Corarusel SECTION 1 & 2 (DESKTOP) */
+
 .title-Carousel{
   font-family:'Josefin-Sans';
   font-size: 32px;
@@ -1099,8 +1101,6 @@ a {
 .slideshow-container{
   overflow: hidden;
   margin-top: 50px;
-  position: relative;
-  height: 850px;
 }
 
 .slideContainer{
@@ -1114,16 +1114,16 @@ a {
 }
 
 .slideControls{
-  position: absolute;
-  bottom:0;
-  left: 46%;
   z-index:20;
-  width:150px;
-  height:10%;
+  height: 150px;
+  max-width: 100%;
   pointer-events:none;
   display: flex;
   flex-flow: row nowrap;
-  justify-content: space-between;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+  gap: 75px;
 }
 
 .slideBoton{
@@ -1135,7 +1135,6 @@ a {
   width: 40px;
   height: 40px;
   text-align:center;
-  position:absolute;
   transition: .3s ease all;
 }
 
@@ -1186,3 +1185,171 @@ a {
   filter: blur(45px) opacity(70%);
   z-index: -50;
 }
+
+
+  /* End of Corarusel SECTION (DESKTOP) */
+
+  /* ITEMVIEW SECTION (DESKTOP) */
+
+  .itemView-Container{
+    min-width: 100%;
+    min-height: 100%;
+    display: grid;
+    grid-template-areas: 
+    'itemView-imgContainer itemView-descriptionContainer '
+    'itemView-imgContainer itemView-carouselContainer ';
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr 1fr;
+    column-gap: 0;
+    align-content: stretch;
+  }
+  
+  .itemView-imgContainer {
+    grid-row-start: 1;
+    grid-row-end: 3;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+  }
+
+  .itemView-infoContainer{
+    height: 100%;
+  }
+
+  @media (max-width: 900px) {
+    .itemView-Container{
+      display: flex;
+      flex-direction: column;
+      max-height: auto;
+      overflow-y: scroll;
+      padding-bottom: 5px;
+    }
+
+    .itemView-imgContainer{
+      max-width: 100%;
+    }
+  
+    .itemView-textContainer{
+      min-height: 200px;
+      overflow-y: scroll;
+    }
+  }
+
+
+  .itemView-descriptionContainer{
+    padding: 15px 20px;
+    min-height: 50%;
+  }
+
+  .itemView-carouselContainer{
+    align-self: center;
+    max-height: 50%;
+  }
+
+  .itemView-textContainer{
+    height: 75%;
+    overflow-y: scroll;
+  }
+
+  .itemView-title{
+    text-align: center;
+    letter-spacing: 0.3rem;
+    font-family: 'Josefin-Sans';
+    font-size: 32px;
+  }
+
+  .itemView-text{
+    font-family: 'Josefin-Sans';
+    font-size: 20px;
+    padding-top: 10px;
+  }
+
+  .slideshow-container__itemView{
+    overflow: hidden;
+    position: relative;
+  }
+
+  
+  .carousel-imgContainer__itemView{
+    display: flex;
+    flex-flow: row nowrap;
+    place-content: center center;
+    width: 27.5%;
+    height: 100%;
+  }
+
+  .slideControls__itemView{
+    position: absolute;
+    left:0;
+    top: 40%;
+    z-index:20;
+    width:100%;
+    height:100%;
+    pointer-events:none;
+    display: flex;
+    flex-flow: row nowrap;
+    justify-content: space-between;
+  }
+  
+  .slide__itemView{
+    min-width: 100%;
+    overflow:hidden;
+    transition:.3s ease all;
+    z-index: 10;
+    position:relative;
+    display: flex;
+    flex-flow: row nowrap;
+    place-content: center center;
+    gap: 5px;
+  }
+  
+  
+  /* End of ITEMVIEW SECTION (DESKTOP) */
+  
+
+  .modal{
+    position: fixed;
+    z-index:999;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+    background-color: rgba(0,0,0,0.75);
+    display: none;
+  }
+  
+  .modal.is-open{
+    display: flex;
+    flex-flow: row wrap;
+    place-content: center center;
+  }
+  
+  .modal-container{
+    position: relative;
+    max-width: 80%;
+    min-height: 75%;
+    overflow-y: auto;
+    background-color: #102C2F;
+  }
+  
+
+  .modal-close{
+    position:absolute;
+    top:1rem;
+    right: 1rem;
+  }
+
+  @media (max-width: 1400px) {
+    .modal-container{
+      max-width: 80%;
+      min-height: 60%;
+    }
+  }
+
+  @media (max-width: 900px) {
+    .modal-container{
+      max-width: 80%;
+      max-height: 100%;
+    }
+  }
+  
