--- a/src/index.css
+++ b/src/index.css
@@ -285,9 +285,6 @@ a {
 
 
 
-
-
-
 /* ======================================================================================================================= 
 ===================================================== MOBILE ============================================================ 
 ======================================================================================================================= */
@@ -951,121 +948,120 @@ a {
 
 
   /* End of CONTACT-INSTAGRAM SECTION (DESKTOP) */
-
-
-  /*FOOTER SECTION (DESKTOP) */
-
-  .footer-container{
-    margin-top: 100px;
-    max-width: 100%;
-    display: flex;
-    flex-flow: column wrap;
-    place-content: center center;
-  }
-
-  .footer-div{
-    margin-top: 25px;
-    width: 250px;
-    display: flex;
-    flex-flow: row wrap;
-    list-style-type: none;
-    flex-flow: row wrap;
-    place-content: center space-evenly;
-  }
-
-  .footer-icon{
-    font-size: 22px;
-    margin-top: -8px;
-  }
-
-  @font-face {
-    font-family: 'Josefin-Sans';
-    src: url("./fonts/JosefinSans-Regular.ttf");
-  }
-
-  .footer-text{
-    font: 22px;
-    font-family:'Josefin-Sans';
-  }
-
-  .logo-containerA{
-    width: 94px;
-    height: 94px;
-    position: relative;
-    align-self: center;
-  }
-
-  .dark-logoLine{
-    height: 3px;
-    background-color: var(--lightColor);
-  }
-
-  .light-logoLine{
-    height: 3px;
-    background-color: var(--darkColor);
-  }
- 
-    
-  .lineA{
-    width: 57.5%;
-    position: absolute;
-    transform-origin: left;
-    transform: rotate(30deg);
-    visibility: hidden;
-  }
-
-  .lineB{
-    height: 3px;
-    width: 57.5%;
-    position: absolute;
-    transform-origin: right ;
-    transform: rotate(-30deg);
-    left: 42.5%;
-    visibility: hidden;
-
-  }
-
-  .lineC{
-    height: 3px;
-    width: 57.5%;
-    position: absolute;
-    transform-origin: left ;
-    transform: rotate(90deg);
-    left: 50%;
-    top: 28.5%;
-    visibility: hidden;
-
-  }
-  .lineD{
-    height: 3px;
-    width: 100%;
-    position: absolute;
-    transform-origin: left ;
-    transform: rotate(0deg);
-    visibility: hidden;
-
-  }
-
-  .lineE{
-    height: 3px;
-    width: 100%; 
-    position: absolute;
-    transform-origin: left ;
-    transform: rotate(60deg);
-    visibility: hidden;
-
-  }
-
-  .lineF{
-    height: 3px;
-    width: 100%;
-    position: absolute;
-    transform-origin: right ;
-    transform: rotate(-60deg);
-    visibility: hidden;
-  }
 }
 
+/*FOOTER SECTION (DESKTOP) */
+.footer-container{
+  margin-top: 100px;
+  max-width: 100%;
+  display: flex;
+  flex-flow: column wrap;
+  place-content: center center;
+  margin-bottom: 20px;
+}
+
+.footer-div{
+  margin-top: 25px;
+  width: 250px;
+  display: flex;
+  flex-flow: row wrap;
+  list-style-type: none;
+  flex-flow: row wrap;
+  place-content: center space-evenly;
+}
+
+.footer-icon{
+  font-size: 22px;
+  margin-top: -8px;
+}
+
+@font-face {
+  font-family: 'Josefin-Sans';
+  src: url("./fonts/JosefinSans-Regular.ttf");
+}
+
+.footer-text{
+  font: 22px;
+  font-family:'Josefin-Sans';
+}
+
+.logo-containerA{
+  width: 94px;
+  height: 94px;
+  position: relative;
+  align-self: center;
+}
+
+
+.dark-logoLine{
+  height: 3px;
+  background-color: var(--lightColor);
+}
+
+.light-logoLine{
+  height: 3px;
+  background-color: var(--darkColor);
+}
+
+  
+.lineA{
+  width: 57.5%;
+  position: absolute;
+  transform-origin: left;
+  transform: rotate(30deg);
+  visibility: hidden;
+}
+
+.lineB{
+  height: 3px;
+  width: 57.5%;
+  position: absolute;
+  transform-origin: right ;
+  transform: rotate(-30deg);
+  left: 42.5%;
+  visibility: hidden;
+
+}
+
+.lineC{
+  height: 3px;
+  width: 57.5%;
+  position: absolute;
+  transform-origin: left ;
+  transform: rotate(90deg);
+  left: 50%;
+  top: 28.5%;
+  visibility: hidden;
+
+}
+.lineD{
+  height: 3px;
+  width: 100%;
+  position: absolute;
+  transform-origin: left ;
+  transform: rotate(0deg);
+  visibility: hidden;
+
+}
+
+.lineE{
+  height: 3px;
+  width: 100%; 
+  position: absolute;
+  transform-origin: left ;
+  transform: rotate(60deg);
+  visibility: hidden;
+
+}
+
+.lineF{
+  height: 3px;
+  width: 100%;
+  position: absolute;
+  transform-origin: right ;
+  transform: rotate(-60deg);
+  visibility: hidden;
+}
   /* End of FOOTER SECTION (DESKTOP) */
 
   /* Corarusel SECTION 1 & 2 (DESKTOP) */
@@ -1076,7 +1072,7 @@ a {
   text-align: center;
   min-width: 100%;
   letter-spacing: 0.3rem;
-  z-index: 500;
+  z-index: 0;
 }
 
 .carousel-imgContainer{
@@ -1084,13 +1080,21 @@ a {
   flex-flow: row nowrap;
   place-content: center center;
   width: 37.5%;
+  max-height: 100%;
+}
+
+.carousel-imgContainer-mobile{
+  display: flex;
+  flex-flow: row nowrap;
+  place-content: center center;
+  width: 100%;
 }
 
 .slide{
   min-width: 100%;
   overflow:hidden;
   transition:.3s ease all;
-  z-index: 10;
+  z-index: 0;
   position:relative;
   display: flex;
   flex-flow: row nowrap;
@@ -1114,8 +1118,8 @@ a {
 }
 
 .slideControls{
-  z-index:20;
-  height: 150px;
+  z-index:0;
+  height: 75px;
   max-width: 100%;
   pointer-events:none;
   display: flex;
@@ -1126,7 +1130,43 @@ a {
   gap: 75px;
 }
 
-.slideBoton{
+.slideIndicatorContainer{
+  width: 100%;
+  height: 50px;
+  display: flex;
+  flex-flow: row wrap;
+  place-content: center center;
+}
+
+.slideIndicatorList{
+  max-width: 100%;
+  display: flex;
+  flex-flow: row nowrap;
+  list-style-type: none;
+  gap: 10px;
+}
+
+.slideIndicator{
+  width: 10px;
+  height: 10px;
+  background-color: var(--brownColor);
+  transition: transform 0.5s;
+  transform: rotate(45deg);
+}
+
+.slideIndicatorDarkActivated{
+  transition: transform 0.5s;
+  background-color: var(--lightColor);
+  transform: rotate(0deg);
+}
+
+.slideIndicatorLightActivated{
+  transition: transform 0.5s;
+  background-color: var(--redColor);
+  transform: rotate(0deg);
+}
+
+.slideBotonDark,.slideBotonLight{
   pointer-events:all;
   background:none;
   border:none;
@@ -1138,8 +1178,12 @@ a {
   transition: .3s ease all;
 }
 
-.slideBoton:hover{
-  background-color: #FFFFFF;
+.slideBotonDark:hover{
+  background-color: var(--lightColor);
+}
+
+.slideBotonLight:hover{
+  background-color: var(--darkColor);
 }
 
 .slideBotonLeft{
@@ -1150,19 +1194,58 @@ a {
   right: 0;
 }
 
-.arrow{
+.arrowLeftDark,.arrowRightDark{
   filter: invert(100%) sepia(5%) saturate(7434%) hue-rotate(317deg) brightness(112%) contrast(114%);
 }
 
-.arrow:hover{
-  animation: slideButtonAnimation;
+.arrowLeftDark:hover{
+  animation: slideButtonAnimationLeft;
   animation-duration:  0.7s;
   animation-fill-mode: forwards;
   filter: invert(15%) sepia(36%) saturate(604%) hue-rotate(137deg) brightness(95%) contrast(100%);
 }
 
+.arrowRightDark:hover{
+  animation: slideButtonAnimationRight;
+  animation-duration:  0.7s;
+  animation-fill-mode: forwards;
+  filter: invert(15%) sepia(36%) saturate(604%) hue-rotate(137deg) brightness(95%) contrast(100%);
+}
 
-@keyframes slideButtonAnimation {
+.arrowLeftLight,.arrowRightLight{
+  filter: invert(15%) sepia(36%) saturate(604%) hue-rotate(137deg) brightness(95%) contrast(100%);
+}
+
+.arrowLeftLight:hover{
+  animation: slideButtonAnimationLeft;
+  animation-duration:  0.7s;
+  animation-fill-mode: forwards;
+  filter: invert(100%) sepia(5%) saturate(7434%) hue-rotate(317deg) brightness(112%) contrast(114%);
+}
+
+.arrowRightLight:hover{
+  animation: slideButtonAnimationRight;
+  animation-duration:  0.7s;
+  animation-fill-mode: forwards;
+  filter: invert(100%) sepia(5%) saturate(7434%) hue-rotate(317deg) brightness(112%) contrast(114%);
+}
+
+
+@keyframes slideButtonAnimationRight {
+  50%{
+    opacity: 0;
+    transform: translate(20px);
+  }
+  51%{
+    transform: translate(-20px);
+  }
+  100% {
+    transform: translate(0px);
+    opacity: 1;
+  }
+}
+
+@keyframes slideButtonAnimationLeft {
   50%{
     opacity: 0;
     transform: translate(-20px);
@@ -1176,24 +1259,35 @@ a {
   }
 }
 
-#background-video{
+.backgroundVideoProjectsDark{
+  border: transparent;
+  width: 100%;
+  height: 87.5%;
+  position: absolute;
+  object-fit:cover;
+  filter: blur(35px) opacity(50%);
+  z-index: -50;
+}
+
+.backgroundVideoProjectsLight{
   border: transparent;
   width: 100%;
   height: 87.5%;
   position: absolute;
   object-fit: cover;
-  filter: blur(45px) opacity(70%);
+  filter: blur(45px) opacity(30%);
   z-index: -50;
 }
 
 
+
   /* End of Corarusel SECTION (DESKTOP) */
 
-  /* ITEMVIEW SECTION (DESKTOP) */
+  /* PRODUCT_DETAIL SECTION (DESKTOP) */
 
   .itemView-Container{
-    min-width: 100%;
-    min-height: 100%;
+    width: 100%;
+    height: 100%;
     display: grid;
     grid-template-areas: 
     'itemView-imgContainer itemView-descriptionContainer '
@@ -1216,39 +1310,53 @@ a {
     height: 100%;
   }
 
-  @media (max-width: 900px) {
-    .itemView-Container{
-      display: flex;
-      flex-direction: column;
-      max-height: auto;
-      overflow-y: scroll;
-      padding-bottom: 5px;
-    }
-
-    .itemView-imgContainer{
-      max-width: 100%;
-    }
-  
-    .itemView-textContainer{
-      min-height: 200px;
-      overflow-y: scroll;
-    }
-  }
-
-
   .itemView-descriptionContainer{
-    padding: 15px 20px;
+    padding: 25px;
     min-height: 50%;
   }
 
   .itemView-carouselContainer{
     align-self: center;
-    max-height: 50%;
+    height: 50%;
   }
 
-  .itemView-textContainer{
-    height: 75%;
+  .itemView-textContainer-dark,.itemView-textContainer-light{
+    width: 100%;
+    height: 100%;
     overflow-y: scroll;
+    padding-right: 5%;
+  }
+
+  .itemView-textContainer-dark::-webkit-scrollbar {
+    width: 5px;   
+  }
+  
+  .itemView-textContainer-dark::-webkit-scrollbar-track {
+    width: 5px;
+    background: rgba(239, 201, 201, 0.1);
+    border-radius: 16px;
+  }
+  
+  .itemView-textContainer-dark::-webkit-scrollbar-thumb {
+    width: 5px;
+    background: var(--lightColor);
+    border-radius: 16px;
+  }
+
+  .itemView-textContainer-light::-webkit-scrollbar {
+    width: 5px;   
+  }
+  
+  .itemView-textContainer-light::-webkit-scrollbar-track {
+    width: 5px;
+    background: rgba(16, 44, 47, 0.1);
+    border-radius: 16px;
+  }
+  
+  .itemView-textContainer-light::-webkit-scrollbar-thumb {
+    width: 5px;
+    background: var(--darkColor);
+    border-radius: 16px;
   }
 
   .itemView-title{
@@ -1256,12 +1364,16 @@ a {
     letter-spacing: 0.3rem;
     font-family: 'Josefin-Sans';
     font-size: 32px;
+    min-height: 32px;
+    text-transform: uppercase;
+    margin-bottom: 10px;
+    font-weight: bolder;
   }
 
   .itemView-text{
     font-family: 'Josefin-Sans';
     font-size: 20px;
-    padding-top: 10px;
+    max-height: 100%;
   }
 
   .slideshow-container__itemView{
@@ -1275,7 +1387,7 @@ a {
     flex-flow: row nowrap;
     place-content: center center;
     width: 27.5%;
-    height: 100%;
+    min-height: 150px;
   }
 
   .slideControls__itemView{
@@ -1302,54 +1414,147 @@ a {
     place-content: center center;
     gap: 5px;
   }
+
+  @media (max-width: 900px) {
+    .itemView-textContainer-dark,.itemView-textContainer-light{
+      height: 95%;
+      overflow-y: scroll;
+    }
+
+    .itemView-title{
+      letter-spacing: 0.2rem;
+      font-size: 28px;
+      min-height: 28px;
+      text-transform: uppercase;
+      margin-bottom: 8px;
+    }
+  }
+
+  @media (max-width: 768px) {
+    .itemView-Container{
+      display: flex;
+      flex-direction: column;
+      height: auto;
+      overflow-y: scroll;
+      padding-bottom: 5px;
+    }
+
+    .itemView-imgContainer{
+      max-width: 100%;
+    }
+  
+    .itemView-textContainer-dark,.itemView-textContainer-light{
+      max-height: 200px;
+      overflow-y: scroll;
+    }
+
+    .itemView-title{
+      letter-spacing: 0.1rem;
+      font-size: 20px;
+      min-height: 20px;
+      text-transform: uppercase;
+    }
+
+    .itemView-text{
+      font-size: 18px;
+    }
+  }
+
   
   
   /* End of ITEMVIEW SECTION (DESKTOP) */
   
 
-  .modal{
+  .modal-dark{
     position: fixed;
     z-index:999;
     top: 0;
     left: 0;
     width: 100vw;
     height: 100vh;
-    background-color: rgba(0,0,0,0.75);
+    background-color: rgba(255, 255, 255, 0.25);
+    display: none;
+  }
+
+  .modal-light{
+    position: fixed;
+    z-index:999;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+    background-color: rgba(0, 0, 0, 0.25);
     display: none;
   }
   
-  .modal.is-open{
+  .modal-dark.is-open,.modal-light.is-open{
     display: flex;
     flex-flow: row wrap;
     place-content: center center;
   }
   
-  .modal-container{
+  .modal-container-dark{
     position: relative;
     max-width: 80%;
-    min-height: 75%;
+    height: 80%;
     overflow-y: auto;
-    background-color: #102C2F;
+    background-color: var(--darkColor);
+  }
+
+  .modal-container-light{
+    position: relative;
+    max-width: 80%;
+    height: 80%;
+    overflow-y: auto;
+    background-color: var(--lightColor);
   }
   
 
-  .modal-close{
+  .modal-close-dark{
     position:absolute;
     top:1rem;
     right: 1rem;
+    background-color: transparent;
+    border: none;
+    font-size: 30px;
+    color:var(--lightColor);
+    cursor:pointer;
+  }
+
+  .modal-close-light{
+    position:absolute;
+    top:1rem;
+    right: 1rem;
+    background-color: transparent;
+    border: none;
+    font-size: 30px;
+    color:var(--blackColor);
+    cursor:pointer;
   }
 
   @media (max-width: 1400px) {
-    .modal-container{
-      max-width: 80%;
-      min-height: 60%;
+    .modal-container-light,.modal-container-dark{
+      max-width: 90%;
+      height: 70%;
     }
   }
 
-  @media (max-width: 900px) {
-    .modal-container{
-      max-width: 80%;
-      max-height: 100%;
+  @media (max-width: 768px) {
+    .modal-container-light,.modal-container-dark{
+      max-width: 100%;
+      min-height: 100%;
+    }
+    .modal-close-light{
+      color:var(--lightColor);
     }
   }
+
+  @media (min-width: 768px) and (max-height:520px) {
+    .modal-container-light,.modal-container-dark{
+      max-width: 95vw;
+      height: 95vh;
+    }
+  }
+
+
   
